recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:4: error: forward reference extends over definition of variable r
  while(y!=0){avance(r:Double)
                     ^